--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ permalink: /
     <form action="#" onsubmit="window.open(whichsite(this), '_self'); return false;" class="indicator-panel">
       <h3>What are you cleaning?</h3>
       <div class="carousel-indicators">
-        <a data-target="#homeSlides" data-slide-to="0" class="active" id="results-heat-exchangers.html"><span>Heat Exchangers</span></a>
-        <a data-target="#homeSlides" data-slide-to="1" id="results-pipe-cleaning.html"><span>Pipe Interiors</span></a>
-        <a data-target="#homeSlides" data-slide-to="2" id="results-surface-prep.html"><span>Exterior Surfaces</span></a>
-        <a data-target="#homeSlides" data-slide-to="3" id="results-tank-vessel-cleaning.html"><span>Tanks/Vessels</span></a>
-        <a data-target="#homeSlides" data-slide-to="4" id="results-furnace-boiler-cleaning.html"><span>Furnaces/Boilers</span></a>
-        <a data-target="#homeSlides" data-slide-to="5" id="sewer-tools.html"><span>Sewer Lines</span></a>
-        <a data-target="#homeSlides" data-slide-to="6" id="downhole-tools.html"><span>Downhole</span></a>
+        <a data-target="#homeSlides" data-slide-to="0" class="active" id="/exchanger-cleaning-applications"><span>Heat Exchangers</span></a>
+        <a data-target="#homeSlides" data-slide-to="1" id="/pipe-cleaning-applications"><span>Pipe Interiors</span></a>
+        <a data-target="#homeSlides" data-slide-to="2" id="/surface-cleaning-applications"><span>Exterior Surfaces</span></a>
+        <a data-target="#homeSlides" data-slide-to="3" id="/tank-vessel-cleaning-applications"><span>Tanks/Vessels</span></a>
+        <a data-target="#homeSlides" data-slide-to="4" id="/furnace-boiler-cleaning-applications"><span>Furnaces/Boilers</span></a>
+        <a data-target="#homeSlides" data-slide-to="5" id="/sewer-tools"><span>Sewer Lines</span></a>
+        <a data-target="#homeSlides" data-slide-to="6" id="/downhole-tools"><span>Downhole</span></a>
       </div>
       <input type="submit" class="btn" value="GO">
     </form>
@@ -25,25 +25,25 @@ permalink: /
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="assets/img/sliders/home/abx-2l-water.jpg" alt="AutoBox ABX-2L heat exchanger tube lancing">
+        <img src="/assets/img/sliders/home/abx-2l-water.jpg" alt="AutoBox ABX-2L heat exchanger tube lancing">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/home/bjv_pipe.jpg" alt="Warthog sewer jetting nozzles">
+        <img src="/assets/img/sliders/home/bjv_pipe.jpg" alt="High pressure pipe cleaning tools and automated systems">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/home/striker-cart.jpg" alt="Warthog sewer jetting nozzles">
+        <img src="/assets/img/sliders/home/striker-cart.jpg" alt="Hands free high pressure hydroblasting for surface prep and decontamination">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/home/torus_in_tank.jpg" alt="Warthog sewer jetting nozzles">
+        <img src="/assets/img/sliders/home/torus_in_tank.jpg" alt="2D and 3D tank and vessel cleaning ">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/home/btc-boiler.jpg" alt="Warthog sewer jetting nozzles">
+        <img src="/assets/img/sliders/home/btc-boiler.jpg" alt="Boiler and boiler tube cleaning">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/home/whp_pipe.jpg" alt="Warthog sewer jetting nozzles">
+        <img src="/assets/img/sliders/home/whp_pipe.jpg" alt="Warthog sewer jetting nozzles">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/home/spincat-hero.jpg" alt="Downhole rotary wash tools">
+        <img src="/assets/img/sliders/home/spincat-hero.jpg" alt="Downhole rotary wash tools">
       </div>
     </div>
   </div>
@@ -59,9 +59,9 @@ permalink: /
     </div>
     <aside class="col-sm-3 offset-sm-1 padding-tb-30 cta">
       <p class="point"><span>Need help with a job?</span><br/>
-      <a href="contact.html">Contact Our Team of Experts</a></p>
+      <a href="/contact">Contact Our Team of Experts</a></p>
       <p class="point late"><span>Want to know more about us?</span><br/>
-      <a href="about-stoneage.html">Read About Our Company</a></p>
+      <a href="/about">Read About Our Company</a></p>
     </aside>
   </div>
 </section>
@@ -80,9 +80,9 @@ permalink: /
         <div class="col-md-4 col-sm-4 padding-right-30">
           <div class="product-thumbnails">
             <img class="img-thumbnail" src="assets/img/thumb/switcher_feature_thumb.png" alt="Warthog WGR Switcher">
-            <a class="btn" href="sewer-tools-nozzles/warthog-wgr-switcher.html">read more +</a>
+            <a class="btn" href="/switcher">read more +</a>
             <div class="caption">
-              <h4><a href="sewer-tools-nozzles/warthog-wgr-switcher.html">Warthog WGR Switcher</a></h4>
+              <h4><a href="/switcher">Warthog WGR Switcher</a></h4>
               <p>Pull, clean and flush without changing nozzles</p>
             </div>
           </div>
@@ -90,9 +90,9 @@ permalink: /
         <div class="col-md-4 col-sm-4 padding-right-30">
           <div class="product-thumbnails">
             <img class="img-thumbnail" src="assets/img/thumb/striker.jpg" alt="">
-            <a class="btn" href="waterblast-automation/striker-remote-shotgunning.html">read more +</a>
+            <a class="btn" href="/striker">read more +</a>
             <div class="caption">
-              <h4><a href="waterblast-automation/striker-remote-shotgunning.html">Striker SKR-100</a></h4>
+              <h4><a href="/striker">Striker SKR-100</a></h4>
               <p>The industry's first portable remote shotgunning system</p>
             </div>
           </div>
@@ -100,9 +100,9 @@ permalink: /
         <div class="col-md-4 col-sm-4 padding-right-30">
           <div class="product-thumbnails">
             <img class="img-thumbnail" src="assets/img/thumb/abx-2l.jpg" alt="AutoBox ABX-2L">
-            <a class="btn" href="waterblast-automation/autobox-abx-2l.html">read more +</a>
+            <a class="btn" href="/abx-2l">read more +</a>
             <div class="caption">
-              <h4><a href="waterblast-automation/autobox-abx-2l.html">AutoBox ABX-2L</a></h4>
+              <h4><a href="/abx-2l">AutoBox ABX-2L</a></h4>
               <p>Automated flex-lancing of heat exchanger tubes</p>
             </div>
           </div>
@@ -114,9 +114,9 @@ permalink: /
         <div class="col-md-4 col-sm-4 padding-right-30">
           <div class="product-thumbnails">
             <img class="img-thumbnail" src="assets/img/thumb/abx-500.jpg" alt="AutoBox ABX-500">
-            <a class="btn" href="waterblast-automation/autobox-abx-500.html">read more +</a>
+            <a class="btn" href="/abx-500">read more +</a>
             <div class="caption">
-              <h4><a href="waterblast-automation/autobox-abx-500.html">AutoBox ABX-500</a></h4>
+              <h4><a href="/abx-500">AutoBox ABX-500</a></h4>
               <p>Hands-free hose handling for high pressure pipe cleaning</p>
             </div>
           </div>
@@ -124,9 +124,9 @@ permalink: /
         <div class="col-md-4 col-sm-4 padding-right-30">
           <div class="product-thumbnails">
             <img class="img-thumbnail" src="assets/img/thumb/bundle-blaster.jpg" alt="Bundle Blaster">
-            <a class="btn" href="waterblast-automation/bundle-blaster.html">read more +</a>
+            <a class="btn" href="/bundle-blaster">read more +</a>
             <div class="caption">
-              <h4><a href="waterblast-automation/bundle-blaster.html">Bundle Blaster</a></h4>
+              <h4><a href="/bundle-blaster">Bundle Blaster</a></h4>
               <p>Shell-side heat exchanger bundle cleaning</p>
             </div>
           </div>
@@ -134,9 +134,9 @@ permalink: /
         <div class="col-md-4 col-sm-4 padding-right-30">
           <div class="product-thumbnails">
             <img class="img-thumbnail" src="assets/img/thumb/btc.jpg" alt="Boiler Tube Cleaner">
-            <a class="btn" href="waterblast-automation/boiler-tube-cleaner.html">read more +</a>
+            <a class="btn" href="/boiler-tube-cleaner">read more +</a>
             <div class="caption">
-              <h4><a href="waterblast-automation/boiler-tube-cleaner.html">Boiler Tube Cleaner</a></h4>
+              <h4><a href="/boiler-tube-cleaner">Boiler Tube Cleaner</a></h4>
               <p>Automated package boiler tube cleaning</p>
             </div>
           </div>
@@ -149,9 +149,9 @@ permalink: /
       <div class="section-heading">
         <h2>White Papers</h2>
       </div>
-      <a href="assets/pdf/reference/papers/quality-waterblasting.pdf" target="_blank"><img src="assets/img/keys-white-paper.jpg" class="img-responsive" /></a>
+      <a href="/assets/pdf/reference/papers/quality-waterblasting.pdf" target="_blank"><img src="assets/img/keys-white-paper.jpg" class="img-responsive" /></a>
       <div class="caption">
-        <h4><a href="assets/pdf/reference/papers/quality-waterblasting.pdf" target="_blank">4 Keys to Quality Waterblasting</a></h4>
+        <h4><a href="/assets/pdf/reference/papers/quality-waterblasting.pdf" target="_blank">4 Keys to Quality Waterblasting</a></h4>
         <p>Basic knowledge of water mechanics can help you achieve better results for your customers.</p>
         <button type="button" class="btn">Download</button>
       </div>
@@ -167,7 +167,7 @@ permalink: /
     <div class="section-heading">
       <h2>Events</h2>
     </div>
-    <a href="http://www.ifat.de/" target="_blank"><img src="assets/img/thumb/upcoming_events_ifat2016.jpg" class="img-responsive"/></a>
+    <a href="http://www.ifat.de/" target="_blank"><img src="/assets/img/thumb/upcoming_events_ifat2016.jpg" class="img-responsive"/></a>
     <div class="caption">
     <h4><a href="http://www.ifat.de/" target="_blank">2016 IFAT<br><span class="small">May 30–June 3, 2016<br>
         Munich, Germany</span></a></h4>
@@ -266,5 +266,17 @@ The products we purchase are of the highest specification from a technical, qual
   </a>-->
 </div>
 <!-- End Testimonials -->
+
+<!-- Slider search links -->
+<script type="text/javascript">
+  function whichsite(form){
+      var sites = document.querySelectorAll(".home-slider .carousel-indicators a"), i = sites.length;
+      while (--i > -1){
+          if(sites[i].classList.contains('active')){
+              return sites[i].id;
+          }
+      }
+  }
+</script>
 
 {% include footer-cta.html %}
