--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-page-type: wb landing
+page-type: landing
 title: Warthog Sewer Nozzles and Hydroexcavation Tools by StoneAge
+excerpt: High quality, durable jetting nozzles for the sewer industry.
 permalink: /sewer-tools
 ---
 
@@ -32,18 +33,18 @@ permalink: /sewer-tools
           <div class="list-group">
             <a href="#" class="list-group-item header">Large Lines  <span class="small thin">8-36 in./203-914 mm</span></a>
             <a href="/switcher" class="list-group-item">WGR Switcher<span class="label label-info">6-36"</span><span class="label label-warning">New!</span></a>
-            <a href="sewer-tools-nozzles/warthog-wgr-magnum.html" class="list-group-item">WGR Magnum<span class="label label-info">6-36"</span></a>
-            <a href="sewer-tools-nozzles/warthog-wg.html" class="list-group-item">WG-1<span class="label label-info">8-36"</span></a>
-            <a href="sewer-tools-nozzles/warthog-wgp.html" class="list-group-item">WGP-1 (Puller)<span class="label label-info">8-36"</span></a>
-            <a href="sewer-tools-nozzles/warthog-wd.html" class="list-group-item">WD 1-1/4<span class="label label-info">8-36"</span></a>
+            <a href="/wgr-magnum" class="list-group-item">WGR Magnum<span class="label label-info">6-36"</span></a>
+            <a href="/wg" class="list-group-item">WG-1<span class="label label-info">8-36"</span></a>
+            <a href="/wgp" class="list-group-item">WGP-1 (Puller)<span class="label label-info">8-36"</span></a>
+            <a href="/wd" class="list-group-item">WD 1-1/4<span class="label label-info">8-36"</span></a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Medium Lines  <span class="small thin">6-18 in./152-457 mm</span></a>
-            <a href="sewer-tools-nozzles/warthog-whr-magnum.html" class="list-group-item">WHR Magnum<span class="label label-info">6-18"</span></a>
-            <a href="sewer-tools-nozzles/warthog-wh.html" class="list-group-item">WH-1/2 &amp; WH-3/4<span class="label label-info">6-18"</span></a>
-            <a href="sewer-tools-nozzles/warthog-whp.html" class="list-group-item">WHP-3/4<span class="label label-info">6-18"</span></a>
+            <a href="/whr-magnum" class="list-group-item">WHR Magnum<span class="label label-info">6-18"</span></a>
+            <a href="/wh" class="list-group-item">WH-1/2 &amp; WH-3/4<span class="label label-info">6-18"</span></a>
+            <a href="/whp" class="list-group-item">WHP-3/4<span class="label label-info">6-18"</span></a>
           </div>
         </div>
       </div>
@@ -52,22 +53,22 @@ permalink: /sewer-tools
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Small Lines  <span class="small thin">2-4 in./51-152 mm</span></a>
-            <a href="sewer-tools-nozzles/warthog-wv.html" class="list-group-item">WV-1/4<span class="label label-info">2-4"</span></a>
-            <a href="sewer-tools-nozzles/warthog-wt.html" class="list-group-item">WT-3/8-C<span class="label label-info">3-6"</span></a>
-            <a href="sewer-tools-nozzles/warthog-ws.html" class="list-group-item">WS-1/2<span class="label label-info">4-8"</span></a>
+            <a href="/wv" class="list-group-item">WV-1/4<span class="label label-info">2-4"</span></a>
+            <a href="/wt" class="list-group-item">WT-3/8-C<span class="label label-info">3-6"</span></a>
+            <a href="/ws" class="list-group-item">WS-1/2<span class="label label-info">4-8"</span></a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Hydro-Excavation</a>
-            <a href="sewer-tools-nozzles/hydro-x.html" class="list-group-item">Hydro-X</a>
+            <a href="/hydro-x" class="list-group-item">Hydro-X</a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Accessories</a>
-            <a href="sewer-tools-nozzles/manhole-cleaner.html" class="list-group-item">Manhole Cleaner</a>
-            <a href="sewer-tools-nozzles/warthog-centralizers.html" class="list-group-item">Centralizers</a>
+            <a href="/manhole-cleaner" class="list-group-item">Manhole Cleaner</a>
+            <a href="/warthog-centralizers" class="list-group-item">Centralizers</a>
           </div>
         </div>
       </div>
