--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-page-type: wb landing
+page-type: landing
 title: High-pressure tools and automated equipment for industrial cleaning
+excerpt: Waterblast tools and automated equipment for exchanger cleaning, pipe cleaning, surface preparation, tank and vessel cleaning, furnace and boiler cleaning, and rotary shotgun tools for high pressure hydroblasting.
 permalink: /waterblast-tools-automated-equipment
 ---
 
@@ -42,28 +43,27 @@ permalink: /waterblast-tools-automated-equipment
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Surface Cleaning</a>
-            <a href="waterblast-automation/striker-remote-shotgunning.html" class="list-group-item">Striker<span class="label label-warning">New for 2016</span></a>
-            <a href="waterblast-automation/floor-cleaner.html" class="list-group-item">Floor Cleaner</a>
-            <a href="waterblast-automation/powered-rotation-units.html" class="list-group-item">Powered Rotational Heads</a>
-            <a href="waterblast-automation/self-rotary-heads.html" class="list-group-item">Self-Rotating Heads</a>
+            <a href="/striker" class="list-group-item">Striker<span class="label label-warning">New for 2016</span></a>
+            <a href="/floor-cleaner" class="list-group-item">Floor Cleaner</a>
+            <a href="/powered-cleaning-heads" class="list-group-item">Powered Rotational Heads</a>
+            <a href="/self-rotary-cleaning-heads" class="list-group-item">Self-Rotating Heads</a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Pipe Cleaning</a>
-            <a href="waterblast-automation/navigator-hose-drive.html" class="list-group-item">Navigator<span class="label label-warning">New for 2016</span></a>
-            <a href="waterblast-automation/prodrive-hose-feed.html" class="list-group-item">AutoBox ProDrive<span class="label label-warning">New for 2016</span></a>
-            <a href="waterblast-automation/inside-diameter-pipe-cleaner.html" class="list-group-item">ID Pipe Cleaner</a>
-            <a href="waterblast-automation/outside-diameter-pipe-cleaner.html" class="list-group-item">OD Pipe Cleaner</a>
+            <a href="/navigator" class="list-group-item">Navigator<span class="label label-warning">New for 2016</span></a>
+            <a href="/prodrive" class="list-group-item">AutoBox ProDrive<span class="label label-warning">New for 2016</span></a>
+            <a href="/id-pipe-cleaner" class="list-group-item">ID Pipe Cleaner</a>
+            <a href="waterblast-automation/od-pipe-cleaner" class="list-group-item">OD Pipe Cleaner</a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Exchanger Cleaning</a>
-            <a href="waterblast-automation/autobox-abx-2l.html" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a>
-            <a href="waterblast-automation/bundle-blaster.html" class="list-group-item">Bundle Blaster<span class="label label-info">Shell Side Cleaning</span></a>
-<!--              <a href="waterblast-automation/sabertooth-flex-lancing.html" class="list-group-item">Sabertooth<span class="label label-info">Flex Lancing</span></a>-->
-            <a href="waterblast-automation/rigid-lance-machine.html" class="list-group-item">Rigid Lance Machine<span class="label label-info">Rigid Lancing</span></a>
+            <a href="/abx-2l" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a>
+            <a href="/bundle-blaster" class="list-group-item">Bundle Blaster<span class="label label-info">Shell Side Cleaning</span></a>
+            <a href="/rigid-lance-machine" class="list-group-item">Rigid Lance Machine<span class="label label-info">Rigid Lancing</span></a>
           </div>
         </div>
       </div>
@@ -73,35 +73,35 @@ permalink: /waterblast-tools-automated-equipment
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Tank &amp; Vessel Cleaning</a>
-            <a href="waterblast-automation/torus-tr-130.html" class="list-group-item">Torus TR-130</a>
-            <a href="waterblast-automation/torus-tr-200.html" class="list-group-item">Torus TR-200</a>
-            <a href="waterblast-automation/torus-positioning-booms.html" class="list-group-item">Torus Positioning Booms</a>
-            <a href="waterblast-automation/sm-air-large-tank-cleaner.html" class="list-group-item">SM-AIR Large Tank Cleaner</a>
+            <a href="/tr-130" class="list-group-item">Torus TR-130</a>
+            <a href="/tr-200" class="list-group-item">Torus TR-200</a>
+            <a href="/torus-booms" class="list-group-item">Torus Positioning Booms</a>
+            <a href="/sm-air" class="list-group-item">SM-AIR Large Tank Cleaner</a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Furnace &amp; Boiler Cleaning</a>
-            <a href="waterblast-automation/boiler-tube-cleaner.html" class="list-group-item">Boiler Tube Cleaner<span class="label label-info">Package Boilers</span></a>
-            <a href="waterblast-automation/yellow-jacket-boiler-cleaner.html" class="list-group-item">Yellow Jacket<span class="label label-info">Online Boiler Cleaning</span></a>
-            <a href="waterblast-automation/cable-swivel-tool.html" class="list-group-item">Cable Swivel Tool</a>
-            <a href="waterblast-automation/bfw-100-boiler-cleaner.html" class="list-group-item">Big Flow Waterlancer<span class="label label-info">Online Boiler Cleaning</span></a>
+            <a href="/boiler-tube-cleaner" class="list-group-item">Boiler Tube Cleaner<span class="label label-info">Package Boilers</span></a>
+            <a href="/yellow-jacket" class="list-group-item">Yellow Jacket<span class="label label-info">Online Boiler Cleaning</span></a>
+            <a href="/cst-air" class="list-group-item">Cable Swivel Tool</a>
+            <a href="/bfw-100" class="list-group-item">Big Flow Waterlancer<span class="label label-info">Online Boiler Cleaning</span></a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Hose Control</a>
-            <a href="waterblast-automation/autobox-abx-500.html" class="list-group-item">AutoBox ABX-500<span class="label label-info">Pipes and Vessels</span></a>
+            <a href="/abx-500" class="list-group-item">AutoBox ABX-500<span class="label label-info">Pipes and Vessels</span></a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Concrete Demolition</a>
-            <a href="waterblast-automation/blackhawk-concrete-demo.html" class="list-group-item">Blackhawk</a>
+            <a href="/blackhawk" class="list-group-item">Blackhawk</a>
           </div>
         </div>
       </div>
-      <div class="to-top">
+      <div class="to-top" id="rotary">
         <a href="#top" title="To Top">
           Top <i class="fa fa-caret-up"></i>
         </a>
@@ -113,7 +113,7 @@ permalink: /waterblast-tools-automated-equipment
 <!-- End Automated Equip -->
 
 <!-- Rotary Tools -->
-<section id="rotary" class="wb-rotary header">
+<section class="wb-rotary header">
   <div class="row-fluid bg-lt-grey header section-header">
     <div class="container">
       <h1>Rotary Waterblast Tools &amp; Accessories</h1>
@@ -121,32 +121,32 @@ permalink: /waterblast-tools-automated-equipment
   </div>
 
   <!-- Rotary Product List -->
-  <div id="rotary" class="row">
+  <div class="row">
     <div class="container padding-tb-30">
       <!-- Row 1 -->
       <div class="row">
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Straight Pipe Cleaning</a>
-            <a href="rotary-waterblast-tools/bjv-pipe-cleaning.html" class="list-group-item">BJV<span class="label label-info">Small &amp; Large Lines</span></a>
-            <a href="rotary-waterblast-tools/bjv-centralizers.html" class="list-group-item">BJV Centralizers</a>
-            <a href="rotary-waterblast-tools/gopher-tube-cleaning.html" class="list-group-item">Gopher<span class="label label-info">Extra High Flow Rates</span></a>
-            <a href="rotary-waterblast-tools/raptor-pipe-cleaning.html" class="list-group-item">Raptor</a>
+            <a href="/bjv" class="list-group-item">BJV<span class="label label-info">Small &amp; Large Lines</span></a>
+            <a href="/bjv-centralizers" class="list-group-item">BJV Centralizers</a>
+            <a href="/gopher" class="list-group-item">Gopher</a>
+            <a href="/raptor" class="list-group-item">Raptor</a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Curved Pipe Cleaning</a>
-            <a href="rotary-waterblast-tools/badger-2in-pipe-cleaning.html" class="list-group-item">2" Badger</a>
-            <a href="rotary-waterblast-tools/badger-4in-pipe-cleaning.html" class="list-group-item">4" Badger</a>
-            <a href="rotary-waterblast-tools/badger-6in-pipe-cleaning.html" class="list-group-item">6" Badger</a>
+            <a href="/2inch-badger" class="list-group-item">2" Badger</a>
+            <a href="/4inch-badger" class="list-group-item">4" Badger</a>
+            <a href="/6inch-badger" class="list-group-item">6" Badger</a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Rotary Shotgun Cleaning</a>
-            <a href="rotary-waterblast-tools/barracuda-shotgunning.html" class="list-group-item">Barracuda</a>
-            <a href="rotary-waterblast-tools/spitfire-shotgunning.html" class="list-group-item">Spitfire</a>
+            <a href="/barracuda" class="list-group-item">Barracuda</a>
+            <a href="/spitfire" class="list-group-item">Spitfire</a>
           </div>
         </div>
       </div>
@@ -155,21 +155,21 @@ permalink: /waterblast-tools-automated-equipment
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Exchanger Cleaning</a>
-            <a href="rotary-waterblast-tools/banshee-tube-cleaners.html" class="list-group-item">Banshee/Beetle<span class="label label-danger">Best Selling</span></a>
+            <a href="/banshee" class="list-group-item">Banshee/Beetle<span class="label label-danger">Best Selling</span></a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Rotary Swivels</a>
-            <a href="rotary-waterblast-tools/rotary-swivels.html" class="list-group-item">Swivel Models</a>
+            <a href="/rotary-swivels" class="list-group-item">Swivel Models</a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Waterblast Accessories</a>
-            <a href="rotary-waterblast-tools/nozzles-extensions.html" class="list-group-item">Nozzles and Extensions</a>
-            <a href="rotary-waterblast-tools/backout-prevention.html" class="list-group-item">Backout Prevention</a>
-            <a href="rotary-waterblast-tools/hose-storage-reel.html" class="list-group-item">Hose Storage Reel</a>
+            <a href="/nozzles" class="list-group-item">Nozzles and Extensions</a>
+            <a href="/backout-prevention" class="list-group-item">Backout Prevention</a>
+            <a href="/hose-reel" class="list-group-item">Hose Storage Reel</a>
           </div>
         </div>
       </div>
