--- a/index.html
+++ b/index.html
@@ -175,12 +175,18 @@ permalink: /
     </div>
   </div>
   <!-- End Events --> 
+  
   <!-- News -->
   <div class="col-md-6 padding-right-60">
     <div class="section-heading">
       <h2>Latest News</h2>
     </div>
     <ul class="home-news list-unstyled">
+      <li>
+        <h4><a href="http://info.stoneagetools.com/new-automated-pipe-cleaning-systems-for-spring-shutdown" target="_blank">New Automated Pipe Cleaning Systems for Spring Shutdown</a></h4>
+        <p>StoneAge is now taking pre-orders for the <strong>Navigator</strong> portable rotary hose device (RHD) and <strong>ProDrive</strong> hands-free hose feed system.<br>
+<small><i class="fa fa-paper-plane-o"></i> E-blast, March 2016</small></p>
+      </li>
       <li>
         <h4><a href="http://us2.campaign-archive2.com/?u=555eb548c5e627095620fb103&id=2d4f666a6a" target="_blank">New StoneAge Regional Sales
 Center in Ohio</a></h4>
@@ -193,12 +199,7 @@ Center in Ohio</a></h4>
         <p>The Switcher™ by StoneAge introduces the ability to run a single sewer jetting tool in either pulling or cleaning mode, without removing the nozzle from the pipe. This breakthrough technology reduces the time and water usage required to make multiple runs with different nozzles.<br>
 <small><i class="fa fa-newspaper-o"></i> PRWeb, February 2016</small></p>
       </li>
-      <li>
-        <h4><a href="http://us2.campaign-archive1.com/?u=555eb548c5e627095620fb103&amp;id=e55e9d73c4" target="_blank">New StoneAge Regional Sales
-Center in Louisiana</a></h4>
-        <p>StoneAge is pleased to announce the opening of our newest branch to serve Gulf Coast area customers. Slated for March, 2016, the new office will be located in Geismar, Louisiana.<br>
-<small><i class="fa fa-paper-plane-o"></i> E-blast, February 2016</small></p>
-      </li>
+      <li><a href="/news">More news here</a></li>
     </ul>
   </div>
   <!-- End News --> 
