--- a/news.html
+++ b/news.html
@@ -14,6 +14,14 @@ permalink: /news
 <section class="results container padding-tb-60">
   <div class="row">
     <div class="col-sm-7">
+      
+      <div class="media">          
+        <div class="media-body">
+          <a href="http://info.stoneagetools.com/new-automated-pipe-cleaning-systems-for-spring-shutdown" target="_blank"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> New Automated Pipe Cleaning Systems for Spring Shutdown</h4></a>
+          StoneAge is now taking pre-orders for the <strong>Navigator</strong> portable rotary hose device (RHD) and <strong>ProDrive</strong> hands-free hose feed system.
+          <p class="grey"><small>E-blast &ndash; March 10, 2016</small></p>
+        </div>
+      </div>
 
       <div class="media">          
         <div class="media-body">
