--- a/news.html
+++ b/news.html
@@ -22,6 +22,14 @@ permalink: /news
           <p class="grey"><small>E-blast &ndash; March 10, 2016</small></p>
         </div>
       </div>
+      
+      <div class="media">          
+        <div class="media-body">
+          <a href="http://info.stoneagetools.com/stoneage-rentals-open-in-texas" target="_blank"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> StoneAge Rentals Open in Texas</h4></a>
+          You can now rent our industry leading tools and automated equipment directly from our regional office in Pasadena, TX.
+          <p class="grey"><small>E-blast &ndash; March 7, 2016</small></p>
+        </div>
+      </div>
 
       <div class="media">          
         <div class="media-body">
