--- a/sewer-tools-nozzles/warthog-whp.html
+++ b/sewer-tools-nozzles/warthog-whp.html
@@ -12,7 +12,7 @@ master-slider: yes
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
       <li><a href="/sewer-tools">Sewer Jetting &amp; Hydro-X Nozzles</a></li>
-      <li class="active">WHP-1/2 &amp; WHP-3/4</li>
+      <li class="active">WHP-3/4</li>
     </ul> 
   </div>
 </div>
@@ -43,17 +43,17 @@ master-slider: yes
     <!-- Product Info -->
     <div class="col-md-6 padding-left-60">
       <div class="product-heading">
-        <h1>WHP-1/2 &amp; WHP-3/4</h1>
+        <h1>WHP-3/4</h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
-            <li><a href="mailto:?subject=Warthog WHP-1/2 and WHP-3/4&body=Check out the Warthog WHP-1/2 and WHP-3/4 by StoneAge: http://www.stoneagetools.com/sewer-tools-nozzles/warthog-whp.html">E-mail link</a></li>
+            <li><a href="mailto:?subject=Warthog WHP-3/4&body=Check out the Warthog WHP-3/4 by StoneAge: http://www.stoneagetools.com/sewer-tools-nozzles/warthog-whp.html">E-mail link</a></li>
           </ul>
         </div>
       <div class="clearfix"></div>
       </div>
 
-      <p class="product-description">The Warthog WHP-1/2 and WHP-3/4 have been designed to produce more pulling power than other tools available on the market. The centralizer fins are streamlined to allow the rear facing jets to be angled more sharply, giving the tool more forward thrust. The result is more pulling power to handle longer lines and moderate inclines.</p>
+      <p class="product-description">The Warthog WHP-3/4 have been designed to produce more pulling power than other tools available on the market. The centralizer fins are streamlined to allow the rear facing jets to be angled more sharply, giving the tool more forward thrust. The result is more pulling power to handle longer lines and moderate inclines.</p>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -74,7 +74,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">WHP-1/2, WHP-3/4</td>
+                  <td colspan="2">WHP-3/4</td>
                 </tr>
                 <tr>
                   <th>Pipe Size</th>
@@ -93,7 +93,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Flow Rating</th>
-                  <td colspan="2">3.0 Cv</td>
+                  <td colspan="2">2.6 Cv</td>
                 </tr>
                 <tr>
                   <th>Rotation Speed</th>
@@ -106,7 +106,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Inlet Connection</th>
-                  <td colspan="2">1/2 NPT or BSPP,<br>3/4 NPT or BSPP</td>
+                  <td colspan="2">3/4 NPT or BSPP</td>
                 </tr>
                 <tr>
                   <th>Nozzle Ports</th>
@@ -171,8 +171,8 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/manuals/WHP_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHP-1/2 &amp; WHP-3/4 Tool Manual</a></li>
-                <li><a href="../assets/pdf/kits-whp.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHP-1/2 &amp; WHP-3/4 Service Kits</a></li>
+                <li><a href="../assets/pdf/manuals/WHP_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHP-3/4 Tool Manual</a></li>
+                <li><a href="../assets/pdf/kits-whp.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHP-3/4 Service Kits</a></li>
 <!--                  <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>-->
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
