product page updates fin-fan, hcs

--- a/sewer-tools-nozzles/warthog-wh.html
+++ b/sewer-tools-nozzles/warthog-wh.html
@@ -209,7 +209,7 @@ master-slider: yes
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/whp"><img class="img-responsive" src="../assets/img/product/thumb-whp-02.jpg" alt="Warthog WHP">
-      <h5>WHP-1/2 &amp; WHP-3/4</h5></a>
+      <h5>WHP-3/4</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/ws"><img class="img-responsive" src="../assets/img/product/thumb-ws-02.jpg" alt="Warthog WS">
