--- a/sewer-tools-nozzles/warthog-whp.html
+++ b/sewer-tools-nozzles/warthog-whp.html
@@ -145,7 +145,7 @@ master-slider: yes
             <div class="panel-body">
               <div class="row">
                 <div class="col-sm-6">
-                  <iframe width="220" height="120" src="https://www.youtube.com/embed/QSa8GERX0m8" frameborder="0" allowfullscreen></iframe><p class="caption">WHP-1/2 &amp; WHP-3/4 Maintenance (Disassembly)</p>
+                  <iframe width="220" height="120" src="https://www.youtube.com/embed/QSa8GERX0m8" frameborder="0" allowfullscreen></iframe><p class="caption">WHP-3/4 Maintenance (Disassembly)</p>
                 </div>
                 <div class="col-sm-6">
                   <iframe width="220" height="120" src="https://www.youtube.com/embed/kXL8VVqcen4" frameborder="0" allowfullscreen></iframe><p class="caption">WH-1/2 &amp; WH-3/4 Maintenance (Assembly)</p>
