--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -27,24 +27,24 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-01.jpg" alt="lorem ipsum dolor sit">
+            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger cleaning system">
             <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-01.jpg" alt="thumb">
               <a data-type="video" href="https://www.youtube.com/embed/jCTBlGM324Q"> </a>
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-02.jpg" alt="lorem ipsum dolor sit">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-02.jpg" alt="AutoBox ABX-2L exchanger cleaning system">
             <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-02.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-03.jpg" alt="lorem ipsum dolor sit">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-03.jpg" alt="AutoBox ABX-2L exchanger cleaning system">
             <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-03.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-04.jpg" alt="lorem ipsum dolor sit">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-04.jpg" alt="AutoBox ABX-2L exchanger cleaning system">
             <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-04.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-05.jpg" alt="lorem ipsum dolor sit">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-05.jpg" alt="AutoBox ABX-2L exchanger cleaning system">
             <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-05.jpg" alt="thumb">
           </div>
         </div>
@@ -80,12 +80,9 @@ master-slider: yes
             <div class="panel-body">
               <ul>
                 <li>Lightweight, modular design for single operator use</li>
-                <li>Quick-swap rollers can be changed without tools to
-accommodate hose sizes from 3-8mm</li>
-                <li>Remotely adjustable hose clamp pressure allows operator
-to adapt to changing conditions and minimize hose wear</li>
-                <li>All components are high quality stainless steel, aluminum
-or plastic to withstand corrosive environments</li>
+                <li>Quick-swap rollers can be changed without tools to accommodate hose sizes from 3-8mm</li>
+                <li>Remotely adjustable hose clamp pressure allows operator to adapt to changing conditions and minimize hose wear</li>
+                <li>All components are high quality stainless steel, aluminum or plastic to withstand corrosive environments</li>
               </ul>
             </div>
           </div>
@@ -208,12 +205,14 @@ or plastic to withstand corrosive environments</li>
       <h2>Related Items</h2>
   </div>
   <div class="row row-centered">
-<!--
     <div class="col-sm-2 col-centered">
-      <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-positioner-01.jpg" alt="Indexing positioner for heat exchanger tube cleaning">
-      <h5>Lightweight Positioner</h5></a>
+      <a href="/fin-fan-kit"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-05.jpg" alt="ABX-2L fin fan cleaning kit">
+      <h5>Fin Fan Kit</h5></a>
     </div>
--->
+    <div class="col-sm-2 col-centered">
+      <a href="/hose-containment"><img class="img-responsive" src="../assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
+      <h5>Hose Containment System</h5></a>
+    </div>
     <div class="col-sm-2 col-centered">
       <a href="/banshee"><img class="img-responsive" src="../assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
       <h5>Banshee Rotary Tools</h5></a>
