--- a/sewer-tools-nozzles/warthog-whr-magnum.html
+++ b/sewer-tools-nozzles/warthog-whr-magnum.html
@@ -226,7 +226,7 @@ master-slider: yes
   </div>
   <div class="col-sm-2 col-centered">
     <a href="/whp"><img class="img-responsive" src="../assets/img/product/thumb-whp-02.jpg" alt="Warthog WHP">
-    <h5>WHP-1/2 &amp; WHP-3/4</h5></a>
+    <h5>WHP-3/4</h5></a>
   </div>
   </div>
 </section>
