lightbox, 2L accessories campaign

--- a/careers.html
+++ b/careers.html
@@ -36,7 +36,16 @@ permalink: /jobs
     </div>
     <div class="row">
       <div class="col-sm-6">
+        
+        <!-- Workable widget -->
+<!--        <div id="whr_embed_hook"></div>-->
+        <!-- End Workable widget -->
+        
         <ul class="list-unstyled job-listings">
+          <li>
+            <a href="assets/pdf/jobs/QC_Inspector_201603.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Quality Control Inspector</h4></a>
+              <p>The Quality Control (QC) Inspector is primarily responsible for the inspection of parts assuring they meet or exceed Engineering requirements as specified on drawings and other documentation.</p>
+          </li>
           <li>
             <a href="assets/pdf/jobs/Order_Fulfillment_Team_Member_201602.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Order Fulfillment Team Member</h4></a>
               <p>This position’s primary responsibility is to manage all aspects of material flow, inventory control, shipping, and receiving pertaining to StoneAge’s customer orders.</p>
@@ -139,3 +148,16 @@ permalink: /jobs
     </div>
   </div>
 </section>
+
+<!-- Workable scripts -->
+<!--
+<script src='https://www.workable.com/assets/embed.js' type='text/javascript'></script>
+
+<script type='text/javascript' charset='utf-8'>
+
+  whr(document).ready(function(){
+
+  whr_embed(80134, {detail: 'titles', base: 'locations', zoom: 'state'});
+
+  });
+</script>-->
