--- a/index.html
+++ b/index.html
@@ -208,7 +208,15 @@ permalink: /
     <div class="section-heading">
       <h2>Message from the CEO</h2>
     </div>
-    <iframe width="260" height="180" src="https://www.youtube.com/embed/S4wGigUqs9o" frameborder="0" allowfullscreen></iframe>
+    <!-- lightbox call -->
+    <div style="margin-right:30px; margin-bottom:10px;">
+      <a href="#" src="/assets/vids.html" data-featherlight="/assets/vids.html #godirect-vid">
+        <img src="assets/img/thumb/godirect-vid.png" alt="StoneAge Direct Sales video" class="img-responsive" />
+      </a>
+    </div>
+    <!-- lightbox content -->
+    
+    <!-- end lightbox content -->
   </div>
 </section>
 
