--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -129,7 +129,7 @@ master-slider: yes
                 <tr>
                   <th>Maximum Air Pressure</th>
                   <td>100 psi</td>
-                  <td><span class="metric">6.9 bar</spam></td>
+                  <td><span class="metric">6.9 bar</span></td>
                 </tr>
                 <tr>
                   <th>Dimensions</th>
@@ -179,8 +179,6 @@ master-slider: yes
                 <li><a href="../assets/pdf/abx-2l_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Data Sheet</a></li>
                 <li><a href="../assets/pdf/manuals/ABX-2L-V2_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L User Manual (8mm)</a></li>
                 <li><a href="../assets/pdf/manuals/ABX-2L_Upgrade_Guide.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Upgrade Guide (6mm to 8mm)</a></li>
-                <li><a href="../assets/pdf/manuals/LWP-500_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Lightweight Positioner (LWP-500) User Manual</a></li>
-                <li><a href="../assets/pdf/manuals/FF-100-XX_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Kit (FF-100-XX) User Manual</a></li>
                 <li><a href="../assets/pdf/manuals/CB-ABX_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;CB-ABX Control Box User Manual</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
@@ -206,16 +204,20 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="/fin-fan-accessory"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-05.jpg" alt="ABX-2L fin fan cleaning kit">
+      <a href="/lightweight-positioner"><img class="img-responsive" src="../assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
+      <h5>Lightweight Positioner</h5></a>
+    </div>
+    <div class="col-sm-2 col-centered">
+      <a href="/banshee"><img class="img-responsive" src="../assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
+      <h5>Banshee Rotary Tools</h5></a>
+    </div>
+    <div class="col-sm-2 col-centered">
+      <a href="/fin-fan-accessory"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-07.jpg" alt="ABX-2L fin fan cleaning kit">
       <h5>Fin Fan Accessory</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/hose-containment"><img class="img-responsive" src="../assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
       <h5>Hose Containment System</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/banshee"><img class="img-responsive" src="../assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
-      <h5>Banshee Rotary Tools</h5></a>
     </div>
   </div>
 </section>
