--- a/waterblast-automation/fin-fan-accessory.html
+++ b/waterblast-automation/fin-fan-accessory.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page-type: product
-title: Fin Fan Cooler Cleaning Kit for AutoBox ABX-2L Automated Flex Lancing System
+title: Fin Fan Cooler Cleaning Accessory for AutoBox ABX-2L Automated Flex Lancing System
 permalink: /fin-fan-accessory
 master-slider: yes
 ---
@@ -27,17 +27,17 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/fin-fan-05.jpg" alt="Fin fan cooler cleaning kit">
-            <img class="ms-thumb" src="../assets/img/product/thumb-fin-fan-05.jpg" alt="thumb">
-<!--              <a data-type="video" href="https://www.youtube.com/embed/jCTBlGM324Q"> </a>-->
-          </div>
-          <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/fin-fan-03.jpg" alt="Fin fan cooler cleaning kit">
-            <img class="ms-thumb" src="../assets/img/product/thumb-fin-fan-03.jpg" alt="thumb">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/fin-fan-07.jpg" alt="Fin fan cooler cleaning kit">
+            <img class="ms-thumb" src="../assets/img/product/thumb-fin-fan-07.jpg" alt="thumb">
+              <a data-type="video" href="https://www.youtube.com/embed/geLBK4Tuj_M"> </a>
           </div>
           <div class="ms-slide">
             <img src="../assets/img/blank.gif" data-src="../assets/img/product/fin-fan-06.jpg" alt="Fin fan cooler cleaning kit">
             <img class="ms-thumb" src="../assets/img/product/thumb-fin-fan-06.jpg" alt="thumb">
+          </div>
+          <div class="ms-slide">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/fin-fan-05.jpg" alt="Fin fan cooler cleaning kit">
+            <img class="ms-thumb" src="../assets/img/product/thumb-fin-fan-05.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -93,12 +93,14 @@ master-slider: yes
               <table class="table specs table-hover">
               <tbody>
                 <tr>
-                  <th>Horizontal Length</th>
-                  <td colspan="2">Standard 15 ft <span class="metric">457 cm</span><br>Custom lengths available</td>
+                  <th>Horizontal Length&#42;</th>
+                  <td>Standard 15 ft</td>
+                  <td><span class="metric">457 cm</span><br></td>
                 </tr>
                 <tr>
-                  <th>Vertical Length</th>
-                  <td colspan="2">Standard 3.5 ft <span class="metric">107 cm</span><br>Custom lengths available</td>
+                  <th>Vertical Length&#42;</th>
+                  <td>Standard 3.5 ft</td>
+                  <td><span class="metric">107 cm</span></td>
                 </tr>
                 <tr>
                   <th>Hose Size</th>
@@ -111,10 +113,10 @@ master-slider: yes
                 </tr>
               </tbody>
               </table>
+              <p>&#42;<em>Custom rail lengths available</em></p>
             </div>
           </div>
         </div>
-<!--
         <div class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
@@ -126,15 +128,26 @@ master-slider: yes
           <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
             <div class="panel-body">
               <div class="col-sm-6">
-                <iframe width="220" height="120" src="https://www.youtube.com/embed/jCTBlGM324Q" frameborder="0" allowfullscreen></iframe><p class="caption">ABX-2L Overview Video</p>
+                <!-- lightbox call -->
+                <a href="#" data-featherlight="/assets/vids.html #fin-fan-vid">
+                  <img src="assets/img/thumb/fin-fan-vid.jpg" alt="Fin Fan exchanger cleaning accessory video" class="img-responsive" />
+                </a>
+                <p class="caption">Fin Fan Accessory Overview</p>
+                <!-- end lightbox call -->
+<!--                <iframe width="220" height="120" src="https://www.youtube.com/embed/geLBK4Tuj_M" frameborder="0" allowfullscreen></iframe><p class="caption">Fin Fan Accessory Overview</p>-->
               </div>
               <div class="col-sm-6">
-                  <iframe width="220" height="120" src="https://www.youtube.com/embed/G8x8qTNmc7Q" frameborder="0" allowfullscreen></iframe><p class="caption">ABX-2L Training Video</p>
+                <!-- lightbox call -->
+                <a href="#" data-featherlight="/assets/vids.html #fin-fan-train-vid">
+                  <img src="assets/img/thumb/fin-fan-train-vid.png" alt="Fin Fan Accessory training video" class="img-responsive" />
+                </a>
+                <p class="caption">Fin Fan Accessory Training</p>
+                <!-- end lightbox call -->
+<!--                  <iframe width="220" height="120" src="https://www.youtube.com/embed/9l7_2nttdV0" frameborder="0" allowfullscreen></iframe><p class="caption">Fin Fan Accessory Training</p>-->
               </div>
             </div>
           </div>
         </div>
--->
         <div class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
@@ -147,8 +160,8 @@ master-slider: yes
             <div class="panel-body">
               <ul>
                 <li><a href="/assets/pdf/fin_fan_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Data Sheet</a></li>
-                <li><a href="../assets/pdf/manuals/FF-100-XX_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory User Manual</a></li>
-                <li><a href="../assets/pdf/sales-manual/FF-100_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Configuration</a></li>
+                <li><a href="/assets/pdf/manuals/FF-100_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory User Manual</a></li>
+                <li><a href="../assets/pdf/sales-manual/Fin_Fan_Config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Configuration</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -177,6 +190,10 @@ master-slider: yes
       <h5>AutoBox ABX-2L</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
+      <a href="/lightweight-positioner"><img class="img-responsive" src="../assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
+      <h5>Lightweight Positioner</h5></a>
+    </div>
+    <div class="col-sm-2 col-centered">
       <a href="/hose-containment"><img class="img-responsive" src="../assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
       <h5>Hose Containment System</h5></a>
     </div>
@@ -196,7 +213,7 @@ master-slider: yes
       <table>
         <tr>
           <td><a href="/assets/pdf/fin_fan_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
-          <td><a href="/assets/pdf/sales-manual/FF-100_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Configuration</a></td>
+          <td><a href="/assets/pdf/sales-manual/Fin_Fan_Config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Configuration</a></td>
           <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
@@ -204,5 +221,53 @@ master-slider: yes
   </div>
 </section>
 <!-- Product extras -->
+
+<!-- Product Testimonials -->
+<div class="row product-testimonials">
+  <div id="carousel-product" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-product" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-product" data-slide-to="1"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+<!--
+        <div class="insight">
+          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <p>The Striker worked great clearing hardened plastic polymer from piping equipment and allowed us to go 100% automated.</p>
+          <p class="signed">-James Schafer,<br/>Debusk Services Group</p>
+        </div>
+-->
+        <img src="../assets/img/sliders/fin-fan-slide-02.jpg" alt="Lightweight positioner for exchanger cleaning" />
+      </div>
+
+      <div class="item">
+<!--
+        <div class="insight">
+          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
+          <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
+        </div>-->
+
+        <img src="../assets/img/sliders/fin-fan-slide-01.jpg" alt="Lightweight positioner for exchanger cleaning" />
+      </div>
+
+    </div><!-- End wrapper -->
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-product" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-product" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+<!-- End Product Testimonials -->
 
 {% include footer-cta.html %}
