--- a/waterblast-automation/hose-containment.html
+++ b/waterblast-automation/hose-containment.html
@@ -29,7 +29,7 @@ master-slider: yes
           <div class="ms-slide">
             <img src="../assets/img/blank.gif" data-src="../assets/img/product/hcs-01.jpg" alt="Hose containment for exchanger cleaning">
             <img class="ms-thumb" src="../assets/img/product/thumb-hcs-01.jpg" alt="thumb">
-<!--              <a data-type="video" href="https://www.youtube.com/embed/jCTBlGM324Q"> </a>-->
+              <a data-type="video" href="https://www.youtube.com/embed/jvWa45TniS0"> </a>
           </div>
           <div class="ms-slide">
             <img src="../assets/img/blank.gif" data-src="../assets/img/product/hcs-02.jpg" alt="Hose containment for exchanger cleaning">
@@ -191,7 +191,6 @@ master-slider: yes
             </div>
           </div>
         </div>
-<!--
         <div class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
@@ -203,15 +202,16 @@ master-slider: yes
           <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
             <div class="panel-body">
               <div class="col-sm-6">
-                <iframe width="220" height="120" src="https://www.youtube.com/embed/jCTBlGM324Q" frameborder="0" allowfullscreen></iframe><p class="caption">ABX-2L Overview Video</p>
-              </div>
-              <div class="col-sm-6">
-                  <iframe width="220" height="120" src="https://www.youtube.com/embed/G8x8qTNmc7Q" frameborder="0" allowfullscreen></iframe><p class="caption">ABX-2L Training Video</p>
+                <!-- lightbox call -->
+                <a href="#" data-featherlight="/assets/vids.html #hcs-vid">
+                  <img src="assets/img/thumb/hcs-vid.jpg" alt="Hose containment for exchanger cleaning video" class="img-responsive" />
+                </a>
+                <p class="caption">HCS-2L Overview Video</p>
+                <!-- end lightbox call -->
               </div>
             </div>
           </div>
         </div>
--->
         <div class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
@@ -223,7 +223,7 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="#" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Data Sheet</a></li>
+                <li><a href="/assets/pdf/hcs-2l_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Data Sheet</a></li>
                 <li><a href="/assets/pdf/manuals/HCS-2L_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L User Manual</a></li>
                 <li><a href="../assets/pdf/sales-manual/HCS-2L_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Configuration</a></li>
               </ul>
@@ -254,7 +254,11 @@ master-slider: yes
       <h5>AutoBox ABX-2L</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/fin-fan-accessory"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-05.jpg" alt="ABX-2L fin fan cleaning kit">
+      <a href="/lightweight-positioner"><img class="img-responsive" src="../assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
+      <h5>Lightweight Positioner</h5></a>
+    </div>
+    <div class="col-sm-2 col-centered">
+      <a href="/fin-fan-accessory"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-07.jpg" alt="ABX-2L fin fan cleaning kit">
       <h5>Fin Fan Accessory</h5></a>
     </div>
   </div>
