--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -24,9 +24,13 @@ permalink: /sewer-tools
       <div class="row">
         <div class="col-sm-4 text-left">
           <img src="assets/img/featured-tag.png" alt="Featured Tool" class="img-responsive" />
-          <div class="embed-responsive embed-responsive-16by9" style="margin-right:30px; margin-bottom:10px;">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/iybnXP6faVU" frameborder="0" allowfullscreen></iframe>
+          <!-- lightbox call -->
+          <div style="margin-right:30px; margin-bottom:10px;">
+            <a href="#" data-featherlight="/assets/vids.html #switcher-vid">
+              <img src="assets/img/thumb/switcher-vid.png" alt="Warthog Switcher video" class="img-responsive" />
+            </a>
           </div>
+          <!-- end lightbox call -->
         </div>
 
         <div class="col-sm-4 product-list">
