--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -54,6 +54,7 @@ permalink: /waterblast-tools-automated-equipment
             <a href="#" class="list-group-item header">Automated Pipe Cleaning</a>
             <a href="/navigator" class="list-group-item">Navigator<span class="label label-warning">New for 2016</span></a>
             <a href="/prodrive" class="list-group-item">AutoBox ProDrive<span class="label label-warning">New for 2016</span></a>
+            <a href="/abx-500" class="list-group-item">AutoBox ABX-500<span class="label label-info">Pipes and Vessels</span></a>
             <a href="/id-pipe-cleaner" class="list-group-item">ID Pipe Cleaner</a>
             <a href="waterblast-automation/od-pipe-cleaner" class="list-group-item">OD Pipe Cleaner</a>
           </div>
@@ -61,8 +62,8 @@ permalink: /waterblast-tools-automated-equipment
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Exchanger Cleaning</a>
-            <a href="/abx-2l" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a>
-            <a href="/fin-fan-kit" class="list-group-item">Fin Fan Accessory for ABX-2L<span class="label label-warning">New for 2016</span></a>
+            <a href="/abx-2l" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a><a href="/lightweight-positioner" class="list-group-item">Lightweight Positioner for ABX-2L</a>
+            <a href="/fin-fan-accessory" class="list-group-item">Fin Fan Accessory for ABX-2L<span class="label label-warning">New for 2016</span></a>
             <a href="/hose-containment" class="list-group-item">Hose Containment for ABX-2L<span class="label label-warning">New for 2016</span></a>
             <a href="/bundle-blaster" class="list-group-item">Bundle Blaster<span class="label label-info">Shell Side Cleaning</span></a>
             <a href="/rigid-lance-machine" class="list-group-item">Rigid Lance Machine<span class="label label-info">Rigid Lancing</span></a>
@@ -88,12 +89,6 @@ permalink: /waterblast-tools-automated-equipment
             <a href="/yellow-jacket" class="list-group-item">Yellow Jacket<span class="label label-info">Online Boiler Cleaning</span></a>
             <a href="/cst-air" class="list-group-item">Cable Swivel Tool</a>
             <a href="/bfw-100" class="list-group-item">Big Flow Waterlancer<span class="label label-info">Online Boiler Cleaning</span></a>
-          </div>
-        </div>
-        <div class="col-sm-4 product-list">
-          <div class="list-group">
-            <a href="#" class="list-group-item header">Automated Hose Control</a>
-            <a href="/abx-500" class="list-group-item">AutoBox ABX-500<span class="label label-info">Pipes and Vessels</span></a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
