--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -56,7 +56,7 @@ permalink: /waterblast-tools-automated-equipment
             <a href="/prodrive" class="list-group-item">AutoBox ProDrive<span class="label label-warning">New for 2016</span></a>
             <a href="/abx-500" class="list-group-item">AutoBox ABX-500<span class="label label-info">Pipes and Vessels</span></a>
             <a href="/id-pipe-cleaner" class="list-group-item">ID Pipe Cleaner</a>
-            <a href="waterblast-automation/od-pipe-cleaner" class="list-group-item">OD Pipe Cleaner</a>
+            <a href="/od-pipe-cleaner" class="list-group-item">OD Pipe Cleaner</a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
