careers page updates

--- a/careers.html
+++ b/careers.html
@@ -38,34 +38,14 @@ permalink: /jobs
       <div class="col-sm-6">
         
         <!-- Workable widget -->
-<!--        <div id="whr_embed_hook"></div>-->
+        <div id="whr_embed_hook"></div>
         <!-- End Workable widget -->
         
-        <ul class="list-unstyled job-listings">
-          <li>
-            <a href="assets/pdf/jobs/QC_Inspector_201603.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Quality Control Inspector</h4></a>
-              <p>The Quality Control (QC) Inspector is primarily responsible for the inspection of parts assuring they meet or exceed Engineering requirements as specified on drawings and other documentation.</p>
-          </li>
-          <li>
-            <a href="assets/pdf/jobs/Order_Fulfillment_Team_Member_201602.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Order Fulfillment Team Member</h4></a>
-              <p>This position’s primary responsibility is to manage all aspects of material flow, inventory control, shipping, and receiving pertaining to StoneAge’s customer orders.</p>
-          </li>
-          <li>
-            <a href="assets/pdf/jobs/Product_Manager_201602.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Product Manager</h4></a>
-              <p>The Product Manager is responsible for managing all aspects of the product planning process across assigned market divisions and ensuring that all assigned product development efforts support the company’s overall strategy and goals.</p>
-          </li>
-          <li>
-            <a href="assets/pdf/jobs/machinist-3_201512.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Machinist III</h4></a>
-              <p>This position is responsible for the machining required by work orders, including but not limited to set up, production, and inspection of all machining and/or shop assembly jobs assigned by the Machine Shop Supervisor.</p>
-          </li>
-        </ul>
       </div>
       <div class="col-sm-4 col-sm-offset-1">
         <h3>To apply:</h3>
-        <p>Please send a cover letter and resume specific to each position you’re applying for to:</p>
-        <p>StoneAge, Inc., Attention HR<br>
-          PO Box 2907, Durango, CO 81302<br>
-          Or email to: <a href="mailto:careers@stoneagetools.com">careers@stoneagetools.com</a></p>
+        <p>Click the job description link and use the "Apply for this job" button to submit your application.</p>
+        <p>Please include a cover letter and resume specific to each position you’re applying for.</p>
         <p class="small"><em>Please note:</em><br>If you are not currently living in the region, your cover letter should include information about your interest in the Durango area. We send acknowledgement by email of all resumes we receive. If we do not contact you for an interview within one to two weeks, we have selected other candidates for the initial interview process. However, we keep all resumes on file until the position is filled, in case we decide to broaden our search. <em>Thank you.</em></p>
       </div>
     </div>
@@ -146,14 +126,9 @@ permalink: /jobs
 </section>
 
 <!-- Workable scripts -->
-<!--
 <script src='https://www.workable.com/assets/embed.js' type='text/javascript'></script>
-
 <script type='text/javascript' charset='utf-8'>
-
-  whr(document).ready(function(){
-
-  whr_embed(80134, {detail: 'titles', base: 'locations', zoom: 'state'});
-
-  });
-</script>-->
+whr(document).ready(function(){
+whr_embed(80134, {detail: 'titles', base: 'jobs', zoom: 'state', grouping: 'locations'});
+});
+</script>
