--- a/request-catalog.html
+++ b/request-catalog.html
@@ -53,6 +53,7 @@ permalink: /request-catalog
     
     <div class="col-sm-3 col-sm-offset-1">
       <h2 class="section-heading">Product Catalogs</h2>
+      <p>Check out the online versions while you wait for your copy to arrive!</p>
       <div class="row margin-bottom-30">
         <a href=product-catalogs.html><img src="assets/img/catalog_cover_wb_2016.jpg" class="img-responsive" alt="2016 StoneAge Waterblast Tools Catalog">
         </a>
